Fix overflow on notification leaderboard

--- a/src/Components/Notifications/LeaderboardHistory/styles.module.scss
+++ b/src/Components/Notifications/LeaderboardHistory/styles.module.scss
@@ -50,7 +50,7 @@
                     &::-webkit-scrollbar {
                         width: 0; /* Safari and Chrome */
                     }
-                    max-height: 100%;
+                    max-height: 93%;
                     overflow-y: scroll;
                     -ms-overflow-style: none; /* Internet Explorer 10+ */
                     scrollbar-width: none; /* Firefox */
